<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mode_text"
        android:textSize="20sp"
        android:layout_marginTop="50dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/offline_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/offline_mode_text"
            android:layout_marginRight="10dp"
            android:textColor="@color/white"
            android:paddingHorizontal="10dp"
            android:background="@drawable/rect_rounded"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/online_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/online_mode_text"
            android:layout_marginLeft="10dp"
            android:textColor="@color/white"
            android:paddingHorizontal="10dp"
            android:background="@drawable/rect_rounded"
            />

    </LinearLayout>

</LinearLayout>