<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".OnlineActivity">

<ImageView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top"
    android:src="@drawable/background"
    android:scaleType="centerCrop"
    />

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/player_1_icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/player_1_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/online_player_1_text"
                    android:textSize="@dimen/player_label_size"
                    android:textColor="@color/dark_grey"
                    />

                <ImageView
                    android:src="@drawable/cross_white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/player_2_icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/player_2_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/online_player_2_text"
                    android:textSize="@dimen/player_label_size"
                    android:textColor="@color/dark_grey"
                    />

                <ImageView
                    android:src="@drawable/circle_white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/dark_blue">

                <ImageView
                    android:id="@+id/tile_1"
                    android:layout_width="@dimen/tile_width"
                    android:layout_height="@dimen/tile_height" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/dark_blue">
                <ImageView
                    android:id="@+id/tile_2"
                    android:layout_width="@dimen/tile_width"
                    android:layout_height="@dimen/tile_height"
                    android:background="@color/dark_blue"
                    />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/dark_blue">
                <ImageView
                    android:id="@+id/tile_3"
                    android:layout_width="@dimen/tile_width"
                    android:layout_height="@dimen/tile_height"
                    android:background="@color/dark_blue"
                    />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/waiting_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_transparent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/waiting_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/waiting_label"
            android:textColor="@color/white"
            android:textSize="@dimen/waiting_label_size" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/dark_blue">
                <ImageView
                    android:id="@+id/tile_4"
                    android:layout_width="@dimen/tile_width"
                    android:layout_height="@dimen/tile_height"
                    android:background="@color/dark_blue"
                    />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/dark_blue">
                <ImageView
                    android:id="@+id/tile_5"
                    android:layout_width="@dimen/tile_width"
                    android:layout_height="@dimen/tile_height"
                    android:background="@color/dark_blue"
                    />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/dark_blue">
                <ImageView
                    android:id="@+id/tile_6"
                    android:layout_width="@dimen/tile_width"
                    android:layout_height="@dimen/tile_height"
                    android:background="@color/dark_blue"
                    />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/dark_blue">
                <ImageView
                    android:id="@+id/tile_7"
                    android:layout_width="@dimen/tile_width"
                    android:layout_height="@dimen/tile_height"
                    android:background="@color/dark_blue"
                    />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/dark_blue">
                <ImageView
                    android:id="@+id/tile_8"
                    android:layout_width="@dimen/tile_width"
                    android:layout_height="@dimen/tile_height"
                    android:background="@color/dark_blue"
                    />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/dark_blue">
                <ImageView
                    android:id="@+id/tile_9"
                    android:layout_width="@dimen/tile_width"
                    android:layout_height="@dimen/tile_height"
                    android:background="@color/dark_blue"
                    />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>

</FrameLayout>